--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
             <label for="colorBySector">Color by Sector</label>
             <input type="checkbox" id="showDiagonal">
             <label for="showDiagonal">Show x=y Line</label>
+            <input type="checkbox" id="showBestFit">
+            <label for="showBestFit">Show Best Fit Line</label>
         </div>
         <div id="plotDiv"></div>
         <div class="tracked-stocks">
@@ -103,5 +105,6 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 
 </html>
