Added "Last Updated" Feature

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
         </div>
     </div>
     <script src="script.js"></script>
+    <div id="lastUpdated" style="color: grey; font-size: 0.8em; text-align: center; margin-top: 20px;"></div>
 </body>
 
 </html>
