--- a/index.html
+++ b/index.html
@@ -6,66 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nic's Stock Screener</title>
     <script src="plotly-2.24.1.min.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f0f0f0;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            background-color: white;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .controls {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-            margin-bottom: 20px;
-        }
-
-        .control-row {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            align-items: center;
-        }
-
-        .control-group {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-        }
-
-        #plotDiv {
-            width: 100%;
-            height: 600px;
-        }
-
-        .tracked-stocks {
-            margin-top: 20px;
-        }
-
-        #trackedStocksList {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        #trackedStocksList li {
-            display: inline-block;
-            margin-right: 10px;
-            margin-bottom: 5px;
-            padding: 5px 10px;
-            background-color: #e0e0e0;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -110,11 +51,25 @@
             </div>
         </div>
         <div id="plotDiv"></div>
-        <div class="tracked-stocks">
-            <h2>Tracked Stocks</h2>
-            <input type="text" id="addStock" placeholder="Add stock ticker">
-            <button id="addStockButton">Add</button>
-            <ul id="trackedStocksList"></ul>
+        <div class="tracked-stocks-container">
+            <div class="tracked-stocks">
+                <h2>Tracked Stocks</h2>
+                <input type="text" id="addStock" placeholder="Add stock ticker">
+                <button id="addStockButton">Add</button>
+                <ul id="trackedStocksList"></ul>
+            </div>
+            <div id="stockInfoContainer" style="display: none;">
+                <h3 id="stockInfoTitle"></h3>
+                <table id="stockInfoTable">
+                    <thead>
+                        <tr>
+                            <th>Metric</th>
+                            <th>Value</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
