Various UI improvements

--- a/index.html
+++ b/index.html
@@ -14,25 +14,19 @@
         <h1>Nic's Stock Screener</h1>
         <h3>Data from Yahoo Finance API.</h3>
         <div class="controls">
-            <div class="properties-container">
-                <div class="property-row">
-                    <div class="control-group">
+            <div class="properties-control">
+                <div class="properties-container">
+                    <div class="property-row">
                         <label for="property1">Property 1:</label>
                         <select id="property1"></select>
-                        <div class="checkbox-group">
-                            <input type="checkbox" id="logScale1" checked>
-                            <label for="logScale1">Log Scale</label>
-                        </div>
+                        <input type="checkbox" id="logScale1" checked>
+                        <label for="logScale1">Log Scale</label>
                     </div>
-                </div>
-                <div class="property-row">
-                    <div class="control-group">
+                    <div class="property-row">
                         <label for="property2">Property 2:</label>
                         <select id="property2"></select>
-                        <div class="checkbox-group">
-                            <input type="checkbox" id="logScale2" checked>
-                            <label for="logScale2">Log Scale</label>
-                        </div>
+                        <input type="checkbox" id="logScale2" checked>
+                        <label for="logScale2">Log Scale</label>
                     </div>
                 </div>
                 <button id="swapProperties">Swap Properties</button>
