--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
                 <div class="properties-container">
                     <div class="property-row">
                         <label for="property1">Property 1:</label>
-                        <select id="property1"></select>
+                        <div class="input-wrapper">
+                            <input type="text" id="property1" class="fuzzy-search" autocomplete="off">
+                            <div id="property1Results" class="search-results"></div>
+                        </div>
                         <input type="checkbox" id="logScale1" checked>
                         <label for="logScale1">Log Scale</label>
                     </div>
                     <div class="property-row">
                         <label for="property2">Property 2:</label>
-                        <select id="property2"></select>
+                        <div class="input-wrapper">
+                            <input type="text" id="property2" class="fuzzy-search" autocomplete="off">
+                            <div id="property2Results" class="search-results"></div>
+                        </div>
                         <input type="checkbox" id="logScale2" checked>
                         <label for="logScale2">Log Scale</label>
                     </div>
@@ -74,7 +80,9 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="fuzzySearch.js"></script>
+    <script type="module" src="plotFunctions.js"></script>
+    <script type="module" src="script.js"></script>
     <div id="lastUpdated" style="color: grey; font-size: 0.8em; text-align: center; margin-top: 20px;"></div>
 </body>
 
