Fixed Remove Button

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
     <script type="module" src="plotFunctions.js"></script>
     <script type="module" src="script.js"></script>
     <div id="lastUpdated" style="color: grey; font-size: 0.8em; text-align: center; margin-top: 20px;"></div>
+    <div style="text-align: center; margin-top: 10px;"><a style="color: grey; font-size: 0.8em;"
+            href="https://ko-fi.com/nic_kup">Support me on Ko-Fi.</a>
+    </div>
 </body>
 
 </html>
