--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nic's Stock Screener</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=GOOGLE_ANALYTICS_ID"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'GOOGLE_ANALYTICS_ID');
+    </script>
+
     <script src="plotly-2.24.1.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 
 <body>
     <div class="container">
