--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Nic's Stock Screener</title>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=GOOGLE_ANALYTICS_ID"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QQB0KEEY6F"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'GOOGLE_ANALYTICS_ID');
+        gtag('config', 'G-QQB0KEEY6F');
     </script>
 
     <script src="plotly-2.24.1.min.js"></script>
