Added Earnings to more info.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
                             <th>Value</th>
                         </tr>
                     </thead>
-                    <tbody></tbody>
+                    <tbody>
+                        <!-- Table content will go here -->
+                    </tbody>
                 </table>
             </div>
         </div>
