--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             </div>
         </div>
         <div id="plotDiv"></div>
+        <div id="customLegend" class="custom-legend"></div>
         <div class="tracked-stocks-container">
             <div class="tracked-stocks">
                 <h2>Tracked Stocks</h2>
